<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">

        <item
            android:id="@+id/network_view"
            android:icon="@drawable/net_menu"
            android:title="@string/network_view" />
        <item
            android:id="@+id/event"
            android:icon="@drawable/event_menu"
            android:title="@string/events">

        </item>

        <item
            android:id="@+id/my_event"
            android:icon="@drawable/event_my"
            android:title="       My Events" />

        <item
            android:id="@+id/my_mentees"
            android:icon="@drawable/mentees_menu"
            android:title="@string/my_mentees" />
        <item
            android:id="@+id/my_mentors"
            android:icon="@drawable/mentors_menu"
            android:title="@string/my_mentors" />
    </group>

    <item
        android:id="@+id/alumini"
        android:title="@string/my_alumini">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/university_menu"
                    android:checkable="false"
                    android:enabled="false"
                    android:icon="@drawable/book"
                    android:title="" />
                <item
                    android:id="@+id/education_strategy"
                    android:enabled="false"
                    android:icon="@drawable/study"
                    android:title="" />
                <item
                    android:id="@+id/menu_year"
                    android:enabled="false"
                    android:icon="@drawable/study"
                    android:title="" />
            </group>
        </menu>
    </item>

    <group
        android:id="@+id/group7"
        android:checkableBehavior="single">

        <item
            android:id="@+id/create_event"
            android:title="@string/create_an_event" />

        <item
            android:id="@+id/create_mentorship"
            android:title="@string/create_a_mentorship_program" />
        <item
            android:id="@+id/sign_out"
            android:title="@string/create_a_mentorship_program" />

    </group>
</menu>