<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_bg_overlay">

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/img_logo"
        android:layout_width="148dp"
        android:layout_height="148dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:background="@android:color/transparent"
        android:src="@drawable/app_logo" />


    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/img"
        android:layout_width="148dp"
        android:layout_height="148dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="72dp"
        android:visibility="gone"
        android:background="@android:color/transparent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="40dp"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="horizontal">


            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/edt_username_logo"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:padding="10dp"
                android:src="@drawable/user_logo" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/edt_username"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="bottom"
                android:hint="@string/email_id"
                android:maxLines="1"
                android:inputType="textEmailAddress"
                app:theme="@style/EditText"
                android:imeOptions="actionNext"
                android:textColor="@android:color/white"
                android:textColorHint="@color/hint_color" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/edt_password_logo"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:padding="10dp"
                android:src="@drawable/pass_logo" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="bottom"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                app:theme="@style/EditText"
                android:imeOptions="actionDone"
                android:textColor="@android:color/white"
                android:textColorHint="@color/hint_color" />

        </LinearLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/btn_login_bg"
            android:text="@string/login"
            android:textColor="@android:color/white" />

        <com.facebook.login.widget.LoginButton
            android:id="@+id/login_button_fb"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:layout_marginTop="16dp"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_linkedin_reg"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/linked_in_bg"
            android:textColor="@android:color/white" />

    </LinearLayout>

</RelativeLayout>