<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_bg_overlay">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.7"
        android:background="@drawable/bg">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/img_logo"
            android:layout_width="148dp"
            android:layout_height="148dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="28dp"
            android:background="@android:color/transparent"
            android:src="@drawable/app_logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="11dp"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:orientation="horizontal">


                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/edt_username_logo1"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:padding="10dp"
                    android:src="@drawable/user_logo_c" />


                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/edt_first"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:hint="First Name"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textColor="@android:color/black"
                    android:textColorHint="@color/light_hint_color"
                    app:theme="@style/EditTextReg" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/edt_username_logo2"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:padding="10dp"
                    android:src="@drawable/user_logo_c" />


                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/edt_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:hint="Last Name"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textColor="@android:color/black"
                    android:textColorHint="@color/light_hint_color"
                    app:theme="@style/EditTextReg" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/edt_username_logo3"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:padding="10dp"
                    android:src="@drawable/user_logo_c" />


                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/edt_Company_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:hint="Company Name"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textColor="@android:color/black"
                    android:textColorHint="@color/light_hint_color"
                    app:theme="@style/EditTextReg" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/edt_username_logo"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:padding="10dp"
                    android:src="@drawable/user_logo_c" />


                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/edt_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:hint="@string/email_id"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textColor="@android:color/black"
                    android:textColorHint="@color/light_hint_color"
                    app:theme="@style/EditTextReg" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/edt_password_logo"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:padding="10dp"
                    android:src="@drawable/pass_c" />

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/edt_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:hint="@string/password"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="@android:color/black"
                    android:textColorHint="@color/light_hint_color"
                    app:theme="@style/EditTextReg" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/edt_conform_password_logo"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:padding="10dp"
                    android:src="@drawable/pass_c" />

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/edt_conform_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:hint="@string/retype_password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="@android:color/black"
                    android:textColorHint="@color/light_hint_color"
                    app:theme="@style/EditTextReg" />

            </LinearLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_login_sign_in"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="12dp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/btn_reg_linkedin_bg"
                android:imeOptions="actionDone"
                android:text="@string/register"
                android:textColor="@android:color/white" />

        </LinearLayout>

    </RelativeLayout>
</RelativeLayout>